--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -5,13 +5,18 @@
     <div class="row">
         <div class="col-md-12">
             <form>
-                <input class="form-control" ng-model="filtro" ng-model-options="{debounce: 500}" placeholder="filtrar" />
+                <div class="input-group">
+                    <span class="input-group-btn">
+                        <a href="fotos/new" class="btn btn-primary">Nova Foto</a>
+                    </span>
+                    <input class="form-control" ng-model="filtro" ng-model-options="{debounce: 500}" placeholder="Filtro" />
+                </div>
             </form>
         </div>
     </div>
     <div class="row">
-        <meu-painel class="col-md-2 painel-animado" ng-repeat="foto in fotos | filter: filtro" titulo="{{foto.titulo}}">
-            <img class="img-responsive center-block" src={{foto.url}} alt={{foto.titulo}}>
+        <meu-painel class="col-md-3 painel-animado" ng-repeat="foto in fotos | filter: filtro" titulo="{{foto.titulo}}">
+            <minha-foto url="{{foto.url}}" titulo="{{foto.titulo}}"></minha-foto>
         </meu-painel>
     </div>
 </div>
