--- a/public/partials/novo.html
+++ b/public/partials/novo.html
@@ -7,18 +7,18 @@
     <div class="col-md-6 p-3">
         <div class="form-group">
             <label>Título</label>
-            <input name="titulo" ng-model="foto.titulo" class="form-control" required ng-maxlength="20">
+            <input name="titulo" ng-model="foto.titulo" class="form-control" required ng-maxlength="20" placeholder="Digite o título da foto">
             <span ng-show="formulario.$submitted && formulario.titulo.$error.required" class="form-control alert-danger">Título Obrigatório</span>
             <span ng-show="formulario.$submitted && formulario.titulo.$error.maxlength" class="form-control alert-danger">Excedido número máximo de 20 caracteres.</span>
         </div>
         <div class="form-group">
             <label>URL</label>
-            <input name="url" ng-model="foto.url" class="form-control" required>
+            <input name="url" ng-model="foto.url" class="form-control" required placeholder="Digite a URL da foto">
             <span ng-show="formulario.$submitted && formulario.url.$error.required" class="form-control alert-danger">URL Obrigatório</span>
         </div>
         <div class="form-group">
             <label>Descrição</label>
-            <textarea name="descricao" ng-model="foto.descricao" class="form-control"></textarea>
+            <textarea name="descricao" ng-model="foto.descricao" class="form-control" placeholder="Digite uma descrição"></textarea>
         </div>
         <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
             Salvar
