--- a/public/partials/novo.html
+++ b/public/partials/novo.html
@@ -20,6 +20,17 @@
             <label>Descrição</label>
             <textarea name="descricao" ng-model="foto.descricao" class="form-control" placeholder="Digite uma descrição"></textarea>
         </div>
+        <div class="form-group">
+          <label>Grupo</label>
+          <select name="grupo" class="form-control"
+            ng-controller="GruposController" required ng-model="foto.grupo"
+            ng-options="grupo._id as (grupo.nome | uppercase) for grupo in grupos">
+            <option value="">Selecione Grupo</option>
+          </select>
+          <span ng-show="formulario.$submitted && formulario.grupo.$error.required" class="form-control alert-danger">
+              Grupo obrigatório
+          </span>          
+        </div>
         <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
             Salvar
         </button>
