--- a/public/partials/novo.html
+++ b/public/partials/novo.html
@@ -20,6 +20,16 @@
             <label>Descrição</label>
             <textarea name="descricao" ng-model="foto.descricao" class="form-control" placeholder="Digite uma descrição"></textarea>
         </div>
+        <div class="form-group">
+            <label>Grupo</label>
+            <select name="grupo" ng-model="foto.grupo" class="form-control" required ng-controller="GruposController" ng-options="grupo as (grupo.nome | uppercase) for grupo in grupos
+            track by grupo._id">
+                <option value="">Escolha um grupo</option>
+            </select>
+            <span ng-show="formulario.$submitted && formulario.grupo.$error.required" class="form-control alert-danger">
+                Grupo obrigatório
+            </span>
+        </div>
         <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
             Salvar
         </button>
