Directiva meus titulos

--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -3,6 +3,7 @@
         <h1 class="text-center">Alurapic</h1>
     </div>
     <p ng-show="mensagem.length" class="form-control alert-success">{{mensagem}}</p>
+    <meus-titulos></meus-titulos>
     <div class="row">
         <div class="col-md-12">
             <form>
